--- a/README
+++ b/README
@@ -1,15 +1,12 @@
 Python implementation of Radial Basis Function Networks.
-This package aims to provide an efficent implementation of RBFN in python.
+This package aims to provide a numpy implementation of RBFN in python.
 
-Currently you can import an RBFN from the Neural Network Toolbox(TM) and
-run it in python. You can use the mlab.export_code to generate a matlab export
+Currently you can import an RBFN from Matlab(R) Neural Network Toolbox(TM) and
+run it in python. You can use the mlab.export_code to generate the matlab export
 script and then use mlab.load to load to run the exported network.
 
 Also you can train your own network using the following functions:
 
-train_exact - "Train" an exact RBFN from a given Input-Output set.
+train_exact - Build an exact RBFN from a given Input-Output set.
+train_ols - Build an RBFN according to the OLS Algorithm
 
-Other functions will be added (non-exact training, ecc...)
-Other backends will be added...
-
-WORK IN PROGRESS :)
